made custom error page responsive

--- a/caddy-srv/custom-error.html
+++ b/caddy-srv/custom-error.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <meta data-n-head="true" name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>sorry....</title>
 </head>
 <body style="text-align: center;"
