added now.sh mirror site to client proxy + error page

--- a/caddy-srv/custom-error.html
+++ b/caddy-srv/custom-error.html
@@ -8,6 +8,9 @@
 <h3>sorry things are not working </h3>
 <h3> if things dont start working in a few minutes:</h3>
   <div>
+    try my frontend mirror over at <a href="https://ammobin.now.sh">ammobin.now.sh</a> 
+  </div>
+  <div>
     send an "angry" email to <a href="mailto:contact@ammobin.ca">contact@ammobin.ca</a>
   </div>
   <div>
