--- a/caddy-srv/custom-error.html
+++ b/caddy-srv/custom-error.html
@@ -8,7 +8,7 @@
 <h3>sorry things are not working </h3>
 <h3> if things dont start working in a few minutes:</h3>
   <div>
-    try my frontend mirror over at <a href="https://ammobin.now.sh">ammobin.now.sh</a> or 
+      try my frontend mirror over at <!--<a href="https://ammobin.now.sh">ammobin.now.sh</a> or--> 
     <a href="https://ammobin-client.herokuapp.com/">ammobin-client.herokuapp.com</a> 
   </div>
   <div>
@@ -17,9 +17,9 @@
   <div>
     file an issue at <a href="https://github.com/ammobinDOTca">https://github.com/ammobinDOTca</a>
   </div> 
-  <div>
+  <!--<div>
     vist <a href="https://gunsale.ca">gunsale.ca</a>
-  </div>
+  </div>-->
   <div>
     go outside
   </div>
