--- a/caddy-srv/custom-error.html
+++ b/caddy-srv/custom-error.html
@@ -9,7 +9,7 @@
 <h3> if things dont start working in a few minutes:</h3>
   <div>
       try my frontend mirror over at <!--<a href="https://ammobin.now.sh">ammobin.now.sh</a> or--> 
-    <a href="https://ammobin-client.herokuapp.com/">ammobin-client.herokuapp.com</a> 
+    <a href="https://ammobin.netlify.com">https://ammobin.netlify.com</a> 
   </div>
   <div>
     send an "angry" email to <a href="mailto:contact@ammobin.ca">contact@ammobin.ca</a>
